# PROPHET-Load_LSTM-mjw

./: .gitignore  .python-version  Calc Peaks.ipynb  HP Analysis.ipynb  Pipfile  Results Analysis.ipynb  Test Analysis.ipynb  lstm_forecaster.ini  readme.md  run_offline.py  sandbox.ipynb  setup-compile.py  setup.cfg  setup.py
PROPHET_LOAD_LSTM/main/: __init__.py  bayes_ensemble.py  lstm_forecaster.py  lstm_forecaster_training.py  run_offline.py
PROPHET_LOAD_LSTM/models/: scaler_out.pkl
PROPHET_LOAD_LSTM/models/lstm_attent_timefeatures/: scaler_in.pkl  scaler_out.pkl
PROPHET_LOAD_LSTM/models/lstm_attent_timefeatures_IMF3-6_3d/: lstm_forecaster copy.ini  model.h5  scaler_out.pkl
PROPHET_LOAD_LSTM/util/: __init__.py  data_util.py  emd_sift.py  model_util.py  overwrite_db_demands_actuation.py  prova_call.py  util.py  view_res.py
analysis/: errors.ipynb
data/: Impianto_4_clean.csv  errors.csv  forecast_df.csv  misure_potenza_all_15_2022_2023.csv  test_JPL_v3.csv  test_JPL_v4.csv  train_JPL_v3.csv  train_JPL_v4.csv
data/input/: HabitahZEH_60min_2016-2019_peaks_1d.csv  Impianto_4_clean_cat_2025.csv  all_JPL_v4.csv  forecast_df.csv  forecasts.csv  test_JPL_v2.csv  test_results.csv  train_JPL_v2.csv
data/output/: errors.csv  forecasts.csv  random_search.csv
data/output/impianto_4/: forecasts.csv
data/output/zeh/: lstm_forecaster_copy.ini  run_offline_copy.py  test_forecasts.csv
models/jpl_v3/: scaler_in.pkl  scaler_out.pkl
models/lstm_attent_timefeatures/: lstm_forecaster copy.ini  scaler_in.pkl
models/lstm_attent_timefeatures_IMF3-6_3d/: scaler_in.pkl
(+72 files in other folders)
