## Copyright (C) 2020 Eugenio Gianniti
##
## All rights reserved.

[metadata]
name = PROPHET-Load_LSTM
version = 1.0.0
author = Alfredo Nespoli
author-email = alfredo.nespoli@polimi.it
license = All rights reserved
home-page = https://gogits.d03.tes.local/CS_AI/PROPHET-Load_LSTM
description = PROPHET module to train the EV neural network
long-description = file: README.md
long_description_content_type = text/markdown
platform = any

[options]
python_requires = >= 3.8.6

setup_requires =
    setuptools >= 38.3.0     # version with most `setup.cfg` bugfixes
install_requires =
    daiquiri >= 2.1.1
    numpy >= 1.18.5
    pandas >= 1.0.5
    pvlib >= 0.7.2
    pytz >= 2020.1
    scikit-learn >= 0.24.2
	tensorflow >= 2.3.0, < 2.3.1
    prophet-database >= 1.1.0